<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/content_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:fitsSystemWindows="true"
        app:expanded="false">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/content_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|enterAlwaysCollapsed">

            <android.support.constraint.ConstraintLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/list_content_layout_color"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/textview_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/sampleItemTextPadding"
                    android:text="@string/item_1"
                    android:textColor="@color/sampleItemTextColor"
                    android:textSize="@dimen/sampleItemTextSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textview_1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/sampleItemTextPadding"
                    android:text="@string/item_2"
                    android:textColor="@color/sampleItemTextColor"
                    android:textSize="@dimen/sampleItemTextSize"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textview_0"
                    app:layout_constraintBottom_toTopOf="@+id/textview_2" />

                <TextView
                    android:id="@+id/textview_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/sampleItemTextPadding"
                    android:text="@string/item_3"
                    android:textColor="@color/sampleItemTextColor"
                    android:textSize="@dimen/sampleItemTextSize"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textview_1"
                    app:layout_constraintBottom_toTopOf="@+id/textview_3" />

                <TextView
                    android:id="@+id/textview_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/sampleItemTextPadding"
                    android:text="@string/item_4"
                    android:textColor="@color/sampleItemTextColor"
                    android:textSize="@dimen/sampleItemTextSize"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textview_2" />

            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>